<resources>
    <string name="app_name">Cosmic</string>
    <string name="positive">Continue</string>

    <string name="about_details">Thank you to those who installed and tried to use the alpha\
        version of Cosmic. We do not have anything here just yet! Follow the official repository\
        for more details and project updates!</string>
    <string name="about_commit">Commit version</string>

    <string name="toolbar_about">About</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_bios">Boot BIOS</string>
    <string name="toolbar_global_bios">BIOS Selector</string>
    <string name="toolbar_global_drivers">Custom Drivers</string>

    <string name="settings_global">Global Settings</string>

    <string name="settings_group_storage">Storage</string>
    <string name="settings_app_storage">App Storage Directory</string>
    <string name="settings_app_storage_summary">Modify or view app working directory</string>
    <string name="settings_group_core">Core</string>
    <string name="settings_bios">BIOS Selector</string>
    <string name="settings_bios_summary">Open the BIOS file selection, eligible for the booting process</string>

    <string name="settings_graphics">Graphics Settings</string>

    <string name="settings_group_gpu">GPU</string>
    <string name="settings_turbo">Turbo Mode</string>
    <string name="settings_custom_drivers">Custom Drivers</string>
    <string name="settings_custom_drivers_summary">Install and manage custom versions of Adreno drivers</string>

    <string name="settings_turbo_off_summary">Forces the GPU to operate at the highest possible clock speed</string>
    <string name="settings_turbo_on_summary">Oh God, run under an AC</string>

    <string name="datastore_app_storage">dsdb_app_storage</string>
    <string name="datastore_gpu_turbo_mode">dsdb_gpu_turbo_mode</string>
    <string name="datastore_gpu_custom_driver">dsdb_gpu_custom_driver</string>
    <string name="datastore_ee_mode">dsdb_ee_mode</string>
    <string name="datastore_bios_path">dsdb_bios_path</string>

    <string name="bios_button_select">Add</string>
    <string name="bios_item_object">0000000000000.bin</string>
    <string name="bios_item_origin_version">USA v00.00(01/01/1970)</string>
    <string name="bios_item_name">Console 19700101–123456</string>
    <string name="bios_item_flag_description">BIOS nationality</string>

    <string name="drv_item_name">Mesa/Turnip</string>
    <string name="drv_item_description">Created by a genius guy</string>
    <string name="drv_item_author">The badass guy here</string>
    <string name="drv_item_vendor">Mesa or Adreno</string>
    <string name="drv_item_minimum_api">Minimum compatible API</string>
    <string name="drv_item_native">The native library what we will load</string>
    <string name="drv_button_select">Install</string>
    <string name="main_screen_no_game">You can\'t run any game by now!</string>
</resources>
