<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_group_gpu"
        app:iconSpaceReserved="false" >

        <SwitchPreferenceCompat
            app:title="@string/settings_turbo"
            app:key="gpuTurboMode"
            app:summaryOn="@string/settings_turbo_on_summary"
            app:summaryOff="@string/settings_turbo_off_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

        <emu.zenith.listeners.ActivitySwapperListener
            app:title="@string/settings_custom_drivers"
            android:summary="@string/settings_custom_drivers_summary"
            app:key="customDrivers"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>