<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.CardView.Outlined"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/biosFlag"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="8dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/bios_item_flag_description" />

        <TextView
            android:id="@+id/biosFullQualified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bios_item_object"
            android:layout_margin="4dp"

            android:paddingStart="8dp"
            android:paddingEnd="8dp"

            app:layout_constraintStart_toEndOf="@+id/biosFlag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/biosName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bios_item_origin_version"

            android:layout_margin="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"

            app:layout_constraintStart_toEndOf="@+id/biosFlag"
            app:layout_constraintTop_toBottomOf="@+id/biosFullQualified" />

        <TextView
            android:id="@+id/biosDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bios_item_name"

            android:layout_margin="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"

            app:layout_constraintStart_toEndOf="@+id/biosFlag"
            app:layout_constraintTop_toBottomOf="@+id/biosName" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/biosChecker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
